# AZTEC-protocol

./: .gitignore  CMakeLists.txt  README.md  aztec.cpp  aztec.h  main.cpp  private_payment.sol  tmp_cmake.txt
App/: App.cpp  CMakeLists.txt
Enclave/: CMakeLists.txt
cmake/: FindSGX.cmake
contracts/: benchmark.js  package-lock.json  truffle-config.js
contracts/contracts/: Migrations.sol  private_payment.sol
contracts/migrations/: 2_aztec_deploy.js
contracts/test/: test_verify.js
draw_experiment/: contract_function_time.py  contract_gas_cost.py  dp_overhead.py  dp_record.txt  ob_nonob_prooftime.py  oblivious_overhead.py  overhead_OBnote.py  proof_gas_cost.py  proof_time_vs_user.py  time_vs_task.py  time_vs_user.py
testnet/: genesis.json  start.sh
